--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -9,8 +9,8 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Scripts/StateMachine/CharacterStateMachine.gd")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scripts/", "res://Scripts/StateMachine/", "res://Scripts/MovementStates/", "res://Assets/")
+dock_filesystem_selected_paths=PackedStringArray("res://Scripts/StateMachine/")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scripts/", "res://Scripts/StateMachine/", "res://Scripts/StateMachine/CharacterStates/", "res://Scripts/StateMachine/CharacterStates/Combat/", "res://Scripts/MovementStates/", "res://Assets/")
 dock_node_current_tab=0
 dock_history_include_scene=true
 dock_history_include_global=true
@@ -31,9 +31,9 @@ dock_5="Inspector,Node,History"
 open_scenes=PackedStringArray("res://SCENE.tscn", "res://Assets/ps_character_gurl.tscn")
 current_scene="res://SCENE.tscn"
 center_split_offset=-728
-selected_default_debugger_tab_idx=1
+selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
-selected_bottom_panel_item=0
+selected_bottom_panel_item=1
 
 [EditorWindow]
 
@@ -43,8 +43,8 @@ position=Vector2i(3840, 29)
 
 [ScriptEditor]
 
-open_scripts=["res://Scripts/StateMachine/CombatStates/AirborneState.gd", "res://Scripts/AnimationController.gd", "res://Scripts/StateMachine/CombatStates/AttackinState.gd", "res://Scripts/StateMachine/BaseMovementState.gd", "res://Scripts/StateMachine/CombatStates/BlockingState.gd", "res://CameraFocusPoint.gd", "res://Scripts/CameraState.gd", "res://Scripts/CameraStateComponent.gd", "res://Scripts/StateMachine/CharacterStateMachine.gd", "res://Scripts/ClickNavigationComponent.gd", "res://Scripts/StateMachine/CombatStates/ClimbingState.gd", "res://Scripts/ControllerCamera.gd", "res://Scripts/ControllerCharacter.gd", "res://Scripts/DebugUI.gd", "res://Scripts/GamepadComponent.gd", "res://Scripts/StateMachine/MovementStates/GroundedState.gd", "res://Scripts/StateMachine/State.gd", "res://Scripts/StateMachine/StateMachine.gd", "res://Scripts/StateMachine/CombatStates/StunnedState.gd"]
-selected_script="res://Scripts/StateMachine/MovementStates/GroundedState.gd"
+open_scripts=["res://Scripts/StateMachine/CharacterStates/AirborneState.gd", "res://Scripts/AnimationController.gd", "res://Scripts/StateMachine/CharacterStates/Combat/AttackinState.gd", "res://Scripts/StateMachine/BaseMovementState.gd", "res://Scripts/StateMachine/CharacterStates/Combat/BlockingState.gd", "res://CameraFocusPoint.gd", "res://Scripts/CameraState.gd", "res://Scripts/CameraStateComponent.gd", "res://Scripts/StateMachine/CharacterStateMachine.gd", "res://Scripts/ClickNavigationComponent.gd", "res://Scripts/StateMachine/CharacterStates/Combat/ClimbingState.gd", "res://Scripts/ControllerCamera.gd", "res://Scripts/ControllerCharacter.gd", "res://Scripts/DebugUI.gd", "res://Scripts/GamepadComponent.gd", "res://Scripts/StateMachine/CharacterStates/GroundedState.gd", "res://Scripts/StateMachine/State.gd", "res://Scripts/StateMachine/StateMachine.gd", "res://Scripts/StateMachine/CharacterStates/Combat/StunnedState.gd"]
+selected_script="res://Scripts/StateMachine/CharacterStateMachine.gd"
 open_help=[]
 script_split_offset=520
 list_split_offset=0
@@ -52,7 +52,7 @@ zoom_factor=nan
 
 [GameView]
 
-floating_window_rect=Rect2i(4920, 459, 1936, 1139)
+floating_window_rect=Rect2i(5734, 506, 1936, 1139)
 floating_window_screen=0
 
 [ShaderEditor]
