--- a/.godot/editor/editor_layout-M-GFX-RBMH10.cfg
+++ b/.godot/editor/editor_layout-M-GFX-RBMH10.cfg
@@ -9,7 +9,7 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Scripts/StateMachine/CharacterStates/GroundedState.gd")
+dock_filesystem_selected_paths=PackedStringArray("res://SCENE.tscn")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scripts/", "res://Scripts/StateMachine/", "res://Scripts/StateMachine/CharacterStates/", "res://Scripts/StateMachine/CharacterStates/Combat/", "res://Scripts/MovementStates/", "res://Assets/")
 dock_node_current_tab=0
 dock_history_include_scene=true
@@ -28,12 +28,12 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://SCENE.tscn", "res://Assets/ps_character_gurl.tscn")
+open_scenes=PackedStringArray("res://Assets/ps_character_gurl.tscn", "res://SCENE.tscn")
 current_scene="res://SCENE.tscn"
 center_split_offset=-728
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=2
-selected_bottom_panel_item=0
+selected_bottom_panel_item=1
 
 [EditorWindow]
 
@@ -43,8 +43,8 @@ position=Vector2i(3840, 29)
 
 [ScriptEditor]
 
-open_scripts=["res://Scripts/StateMachine/CharacterStates/AirborneState.gd", "res://Scripts/AnimationController.gd", "res://Scripts/StateMachine/CharacterStates/Combat/AttackinState.gd", "res://Scripts/StateMachine/BaseMovementState.gd", "res://Scripts/StateMachine/CharacterStates/Combat/BlockingState.gd", "res://CameraFocusPoint.gd", "res://Scripts/CameraState.gd", "res://Scripts/CameraStateComponent.gd", "res://Scripts/StateMachine/CharacterStateMachine.gd", "res://Scripts/ClickNavigationComponent.gd", "res://Scripts/StateMachine/CharacterStates/Combat/ClimbingState.gd", "res://Scripts/ControllerCamera.gd", "res://Scripts/ControllerCharacter.gd", "res://Scripts/DebugUI.gd", "res://Scripts/GamepadComponent.gd", "res://Scripts/StateMachine/CharacterStates/GroundedState.gd", "res://Scripts/StateMachine/State.gd", "res://Scripts/StateMachine/StateMachine.gd", "res://Scripts/StateMachine/CharacterStates/Combat/StunnedState.gd"]
-selected_script="res://Scripts/StateMachine/CharacterStates/GroundedState.gd"
+open_scripts=["res://Scripts/StateMachine/CharacterStates/AirborneState.gd", "res://Scripts/AnimationController.gd", "res://Scripts/StateMachine/CharacterStates/Combat/AttackinState.gd", "res://Scripts/StateMachine/BaseMovementState.gd", "res://Scripts/StateMachine/CharacterStates/Combat/BlockingState.gd", "res://CameraFocusPoint.gd", "res://Scripts/CameraState.gd", "res://Scripts/CameraStateComponent.gd", "res://Scripts/StateMachine/CharacterStateMachine.gd", "res://Scripts/ClickNavigationComponent.gd", "res://Scripts/StateMachine/CharacterStates/Combat/ClimbingState.gd", "res://Scripts/ControllerCamera.gd", "res://Scripts/ControllerCharacter.gd", "res://Scripts/DebugUI.gd", "res://Scripts/GamepadComponent.gd", "res://Scripts/GlobalInputDebug.gd.gd", "res://Scripts/StateMachine/CharacterStates/GroundedState.gd", "res://Scripts/StateMachine/State.gd", "res://Scripts/StateMachine/StateMachine.gd", "res://Scripts/StateMachine/CharacterStates/Combat/StunnedState.gd"]
+selected_script="res://Scripts/ClickNavigationComponent.gd"
 open_help=[]
 script_split_offset=520
 list_split_offset=0
@@ -66,7 +66,7 @@ text_shader_zoom_factor=1.0
 
 log_filter_0=true
 log_filter_2=true
-log_filter_1=true
+log_filter_1=false
 log_filter_3=true
 log_filter_4=true
 collapse=false
