--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -17,12 +17,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 25,
+"column": 37,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 58,
-"scroll_position": 14.0,
-"selection": false,
+"row": 111,
+"scroll_position": 101.0,
+"selection": true,
+"selection_from_column": 0,
+"selection_from_line": 111,
+"selection_to_column": 37,
+"selection_to_line": 111,
 "syntax_highlighter": "GDScript"
 }
 
@@ -63,7 +67,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 123,
-"scroll_position": 88.0,
+"scroll_position": 89.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -77,7 +81,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 92,
-"scroll_position": 0.0,
+"scroll_position": 72.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -87,11 +91,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 2,
+"column": 24,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 354,
-"scroll_position": 319.0,
+"row": 75,
+"scroll_position": 54.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -105,7 +109,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 83,
-"scroll_position": 0.0,
+"scroll_position": 63.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -115,11 +119,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 37,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 47,
-"scroll_position": 12.0,
+"row": 34,
+"scroll_position": 17.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -189,7 +193,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 48,
-"scroll_position": 10.0,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -203,7 +207,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 22,
-"scroll_position": 1.0,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
