--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -1,17 +1,3 @@
-[res://Scripts/CameraStateMachine/CameraState.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 9,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 0,
-"scroll_position": 0.0,
-"selection": false,
-"syntax_highlighter": "GDScript"
-}
-
 [res://Scripts/InputComponents/ClickNavigationComponent.gd]
 
 state={
@@ -21,7 +7,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 111,
-"scroll_position": 101.0,
+"scroll_position": 84.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -49,7 +35,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 261,
-"scroll_position": 225.0,
+"scroll_position": 234.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -63,7 +49,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 123,
-"scroll_position": 87.0,
+"scroll_position": 88.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -73,11 +59,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 23,
+"column": 29,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 92,
-"scroll_position": 72.0,
+"row": 130,
+"scroll_position": 111.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -92,20 +78,6 @@ state={
 "h_scroll_position": 0,
 "row": 380,
 "scroll_position": 346.0,
-"selection": false,
-"syntax_highlighter": "GDScript"
-}
-
-[res://Scripts/CameraStateMachine/CameraStateMachine.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 29,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 83,
-"scroll_position": 63.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -185,11 +157,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 2,
+"column": 23,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 334,
-"scroll_position": 307.0,
+"row": 95,
+"scroll_position": 73.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -232,6 +204,34 @@ state={
 "h_scroll_position": 0,
 "row": 0,
 "scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://character_controller_plan.md]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 45,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 165,
+"scroll_position": 123.0,
+"selection": false,
+"syntax_highlighter": "Markdown"
+}
+
+[res://Scripts/CameraStateMachine/CameraResponder.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 77,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 116,
+"scroll_position": 99.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
