--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -7,21 +7,13 @@ list=[{
 "language": &"GDScript",
 "path": "res://Scripts/Controllers/AnimationController.gd"
 }, {
-"base": &"Resource",
-"class": &"CameraState",
-"icon": "",
-"is_abstract": false,
-"is_tool": false,
-"language": &"GDScript",
-"path": "res://Scripts/CameraStateMachine/CameraState.gd"
-}, {
 "base": &"Node",
-"class": &"CameraStateMachine",
+"class": &"CameraResponder",
 "icon": "",
 "is_abstract": false,
 "is_tool": false,
 "language": &"GDScript",
-"path": "res://Scripts/CameraStateMachine/CameraStateMachine.gd"
+"path": "res://Scripts/CameraStateMachine/CameraResponder.gd"
 }, {
 "base": &"State",
 "class": &"CharacterStateBase",
