--- a/.godot/editor/editor_layout-M-GFX-RBMH10-2.cfg
+++ b/.godot/editor/editor_layout-M-GFX-RBMH10-2.cfg
@@ -9,8 +9,8 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Scripts/_Debug/")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scripts/", "res://Scripts/Controllers/", "res://Scripts/CharacterStateMachine/", "res://Scripts/_Debug/", "res://Assets/")
+dock_filesystem_selected_paths=PackedStringArray("res://Scripts/CharacterStateMachine/States/StateWalking.gd")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scripts/", "res://Scripts/Controllers/", "res://Scripts/CharacterStateMachine/", "res://Scripts/CharacterStateMachine/States/", "res://Scripts/_Debug/", "res://Assets/")
 dock_node_current_tab=0
 dock_history_include_scene=true
 dock_history_include_global=true
@@ -20,7 +20,7 @@ dock_split_2=-208
 dock_split_3=0
 dock_hsplit_1=0
 dock_hsplit_2=416
-dock_hsplit_3=-481
+dock_hsplit_3=-480
 dock_hsplit_4=0
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -45,7 +45,7 @@ size=Vector2i(3248, 1530)
 [ScriptEditor]
 
 open_scripts=["res://Scripts/Controllers/AnimationController.gd", "res://Scripts/CameraResponder.gd", "res://Scripts/CharacterStateMachine/CharacterStateMachine.gd", "res://Scripts/CharacterStateMachine/CharacterStatesBase.gd", "res://character_controller_plan.md", "res://Scripts/InputComponents/ClickNavigationComponent.gd", "res://Scripts/Controllers/ControllerCamera.gd", "res://Scripts/Controllers/ControllerCharacter.gd", "res://Scripts/_Debug/DebugUI.gd", "res://Scripts/InputComponents/GamepadComponent.gd", "res://Scripts/CharacterStateMachine/State.gd", "res://Scripts/CharacterStateMachine/States/StateAirborne.gd", "res://Scripts/CharacterStateMachine/States/StateIdle.gd", "res://Scripts/CharacterStateMachine/States/StateJumping.gd", "res://Scripts/CharacterStateMachine/States/StateLanding.gd", "res://Scripts/CharacterStateMachine/States/StateRunning.gd", "res://Scripts/CharacterStateMachine/States/StateWalking.gd"]
-selected_script="res://Scripts/CameraResponder.gd"
+selected_script="res://Scripts/Controllers/ControllerCamera.gd"
 open_help=[]
 script_split_offset=520
 list_split_offset=0
