--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -48,8 +48,8 @@ state={
 "column": 2,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 191,
-"scroll_position": 192.0,
+"row": 185,
+"scroll_position": 159.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -62,8 +62,8 @@ state={
 "column": 3,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 238,
-"scroll_position": 202.0,
+"row": 294,
+"scroll_position": 268.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -77,7 +77,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 177,
-"scroll_position": 0.0,
+"scroll_position": 178.0,
 "selection": false,
 "syntax_highlighter": "Markdown"
 }
@@ -185,11 +185,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 22,
+"column": 13,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 178,
-"scroll_position": 152.0,
+"row": 222,
+"scroll_position": 196.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -255,11 +255,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 34,
+"column": 2,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 71,
-"scroll_position": 45.0,
+"row": 105,
+"scroll_position": 79.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -316,6 +316,20 @@ state={
 "h_scroll_position": 0,
 "row": 34,
 "scroll_position": 21.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Scripts/Camera/CameraComponent.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 0,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
