--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -49,7 +49,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 185,
-"scroll_position": 159.0,
+"scroll_position": 160.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -77,7 +77,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 177,
-"scroll_position": 178.0,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "Markdown"
 }
@@ -213,12 +213,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 14,
+"column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 264,
-"scroll_position": 206.0,
-"selection": false,
+"row": 310,
+"scroll_position": 269.0,
+"selection": true,
+"selection_from_column": 0,
+"selection_from_line": 0,
+"selection_to_column": 0,
+"selection_to_line": 310,
 "syntax_highlighter": "GDScript"
 }
 
@@ -244,8 +248,8 @@ state={
 "column": 52,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 350,
-"scroll_position": 315.0,
+"row": 326,
+"scroll_position": 300.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -255,11 +259,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 2,
+"column": 16,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 105,
-"scroll_position": 79.0,
+"row": 166,
+"scroll_position": 125.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -269,11 +273,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 2,
+"column": 42,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 81,
-"scroll_position": 0.0,
+"row": 71,
+"scroll_position": 50.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -283,11 +287,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 2,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 150,
-"scroll_position": 112.0,
+"row": 133,
+"scroll_position": 108.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
