--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -59,11 +59,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 3,
+"column": 35,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 294,
-"scroll_position": 268.0,
+"row": 163,
+"scroll_position": 132.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -91,7 +91,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 66,
-"scroll_position": 30.0,
+"scroll_position": 17.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -105,7 +105,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 1,
-"scroll_position": 21.0,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -162,34 +162,6 @@ state={
 "h_scroll_position": 0,
 "row": 5,
 "scroll_position": 5.0,
-"selection": false,
-"syntax_highlighter": "GDScript"
-}
-
-[res://Scripts/Character/CharacterStateMachine.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 2,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 340,
-"scroll_position": 301.0,
-"selection": false,
-"syntax_highlighter": "GDScript"
-}
-
-[res://Scripts/Character/CharacterStatesBase.gd]
-
-state={
-"bookmarks": PackedInt32Array(),
-"breakpoints": PackedInt32Array(),
-"column": 13,
-"folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 222,
-"scroll_position": 196.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -262,8 +234,8 @@ state={
 "column": 16,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 166,
-"scroll_position": 125.0,
+"row": 231,
+"scroll_position": 186.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -333,6 +305,38 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 0,
+"scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Scripts/Character/CharacterStateBase.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 14,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 34,
+"scroll_position": 0.0,
+"selection": true,
+"selection_from_column": 9,
+"selection_from_line": 34,
+"selection_to_column": 14,
+"selection_to_line": 34,
+"syntax_highlighter": "GDScript"
+}
+
+[res://Scripts/Character/CharacterStatesMachine.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 2,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 340,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
