--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -62,8 +62,8 @@ state={
 "column": 3,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 263,
-"scroll_position": 216.0,
+"row": 300,
+"scroll_position": 253.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -311,12 +311,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 76,
+"column": 14,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 257,
-"scroll_position": 210.0,
-"selection": false,
+"row": 34,
+"scroll_position": 0.0,
+"selection": true,
+"selection_from_column": 9,
+"selection_from_line": 34,
+"selection_to_column": 14,
+"selection_to_line": 34,
 "syntax_highlighter": "GDScript"
 }
 
