--- a/.godot/global_script_class_cache.cfg
+++ b/.godot/global_script_class_cache.cfg
@@ -96,6 +96,22 @@ list=[{
 "path": "res://Scripts/Components/JumpSystem.gd"
 }, {
 "base": &"Node",
+"class": &"MovementCalculator",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://Scripts/Character/MovementCalculator.gd"
+}, {
+"base": &"Node",
+"class": &"MovementStateManager",
+"icon": "",
+"is_abstract": false,
+"is_tool": false,
+"language": &"GDScript",
+"path": "res://Scripts/Character/MovementStateManager.gd"
+}, {
+"base": &"Node",
 "class": &"State",
 "icon": "",
 "is_abstract": false,
